# server-crud

./: .gitignore  README.md  server-crud.cabal  stack.yaml
app/: devel.hs
config/: models  settings.yml
src/: Api.hs  Application.hs  Config.hs  Model.hs  Settings.hs
src/Api/: Company.hs  Crud.hs  Others.hs  User.hs  Util.hs
test/: endpoints.http  loginResponse.json
